tests/ui/resolve/issue-82156.stderr
error[E0433]: cannot find item `super` in this scope
  --> $DIR/issue-82156.rs:2:5
   |
LL |     super();
   |     ^^^^^ can't use `super` as an identifier
   |
help: if you still want to call your identifier `super`, use the raw identifier format
   |
LL |     r#super();
   |     ++

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0433`.
