tests/ui/resolve/issue-82156.rs
fn main() {
    super(); //~ ERROR cannot find item `super`
}
